Finalisation du projet gestion de stock (CRUD, API, dashboard)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <p id="error-message"></p>
     </div>
 
-    <script src="js/auth.js"></script>
+    <!-- SCRIPT LOGIN UNIQUEMENT -->
+    <script src="js/login.js"></script>
+
 </body>
 </html>
+
+
