--- a/pages/entrepots.html
+++ b/pages/entrepots.html
@@ -69,7 +69,9 @@
     </div>
 
     <!-- SCRIPT -->
+    <script src="../js/api.js"></script>
     <script src="../js/entrepots.js"></script>
+    <script src="../js/auth.js"></script>
 
 </body>
 </html>
