--- a/pages/fournisseurs.html
+++ b/pages/fournisseurs.html
@@ -73,7 +73,9 @@
     </div>
 
     <!-- SCRIPT -->
+    <script src="../js/api.js"></script>
     <script src="../js/fournisseurs.js"></script>
+    <script src="../js/auth.js"></script>
 
 </body>
 </html>
