--- a/pages/categories.html
+++ b/pages/categories.html
@@ -65,7 +65,9 @@
     </div>
 
     <!-- SCRIPT -->
+    <script src="../js/api.js"></script>
     <script src="../js/categories.js"></script>
+    <script src="../js/auth.js"></script>
 
 </body>
 </html>
