--- a/pages/commandes.html
+++ b/pages/commandes.html
@@ -38,13 +38,13 @@
 
                 <form id="orderForm">
                     <label for="orderProduct">Produit</label>
-                    <input type="text" id="orderProduct" required>
+                    <input type="text" id="orderProduct" placeholder="Nom du produit" required>
 
                     <label for="orderSupplier">Fournisseur</label>
-                    <input type="text" id="orderSupplier" required>
+                    <input type="text" id="orderSupplier" placeholder="Nom du fournisseur" required>
 
                     <label for="orderQuantity">Quantité</label>
-                    <input type="number" id="orderQuantity" required>
+                    <input type="number" id="orderQuantity" min="1" required>
 
                     <button type="submit">Enregistrer</button>
                 </form>
@@ -64,7 +64,7 @@
                         </tr>
                     </thead>
                     <tbody id="ordersTableBody">
-                        <!-- dynamique -->
+                        <!-- Contenu injecté par commandes.js -->
                     </tbody>
                 </table>
             </section>
@@ -72,8 +72,10 @@
 
     </div>
 
-    <!-- SCRIPT -->
+    <!-- SCRIPTS (ORDRE OBLIGATOIRE) -->
+    <script src="../js/api.js"></script>
     <script src="../js/commandes.js"></script>
+    <script src="../js/auth.js"></script>
 
 </body>
 </html>
