--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -66,7 +66,9 @@
     </div>
 
     <!-- SCRIPT DASHBOARD -->
+    <script src="../js/api.js"></script>
     <script src="../js/dashboard.js"></script>
+    <script src="../js/auth.js"></script>
 
 </body>
 </html>
