--- a/pages/produits.html
+++ b/pages/produits.html
@@ -72,7 +72,9 @@
         </main>
 
     </div>
+<script src="../js/api.js"></script>
 <script src="../js/produits.js"></script>
+<script src="../js/auth.js"></script>
 
 </body>
 </html>
